--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -11,7 +11,7 @@
   background: $gray-lightest;
   height: 60px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding: 0 $spacer;
   font-weight: 500;
